--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="//cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css" />
-    <link href="static/style.css" rel="stylesheet" type="text/css" />
-    <script src="//cdn.muicss.com/mui-latest/js/mui.min.js"></script>
+    <meta name="theme-color" content="#E57373" />
+    <link href="https://cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
+    <title>Native JavaScript Application</title>
 </head>
 <body>
 <div id="sidebar">
