--- a/src/index.html
+++ b/src/index.html
@@ -4,38 +4,50 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#E57373" />
+    <meta name="theme-color" content="#006eff" />
     <link href="https://cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
     <title>Native JavaScript Application</title>
 </head>
 <body>
 <div id="sidebar">
-    <div class="mui--text-white mui--text-display1 mui--align-vertical">SAMPLE BLOG</div>
+    <div class="mui--text-white mui--text-display1 mui--align-vertical">
+        Podcast questions
+        <br>
+        <small class="author">by malinatrash</small>
+    </div>
 </div>
 <div id="content" class="mui-container-fluid">
     <div class="mui-row">
         <div class="mui-col-sm-10 mui-col-sm-offset-1">
             <br>
             <br>
-            <div class="mui--text-black-54 mui--text-body2">PINNED POST</div>
+            <div class="mui--text-black-54 mui--text-body2">Ask your question</div>
             <div class="mui-divider"></div>
             <br>
-            <div class="mui--text-headline">MUI Acquires New Features</div>
-            <div class="mui--text-black-54">By <a href="#">Team MUI</a> 3 days ago</div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis aliquam ipsum sed dignissim. Sed ac accumsan odio. Vivamus tristique dignissim neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc cursus felis nec purus condimentum vestibulum. Donec mauris nisi, sollicitudin eget iaculis id, suscipit id odio. <a href="#">Read more...</a></div>
+            <form class="mui-form" id="form">
+                <div class="mui-textfield">
+                    <input type="text" id="question-input" placeholder="Type your question" required minlength="10" maxlength="255">
+                    <label for="question-input">What do you want to ask?</label>
+                </div>
+                <button
+                        id="submit"
+                        disabled
+                        type="submit"
+                        class="mui-btn mui-btn--raised mui-btn--primary">ASK</button>
+            </form>
             <br>
             <br>
-            <div class="mui--text-black-54 mui--text-body2">RECENT POSTS</div>
+            <div class="mui--text-black-54 mui--text-body2">All your questions</div>
             <div class="mui-divider"></div>
             <br>
-            <div class="mui--text-headline">MUI Acquires New Features</div>
-            <div class="mui--text-black-54">By <a href="#">Team MUI</a> 1 week ago</div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis aliquam ipsum sed dignissim. Sed ac accumsan odio. Vivamus tristique dignissim neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc cursus felis nec purus condimentum vestibulum. Donec mauris nisi, sollicitudin eget iaculis id, suscipit id odio. <a href="#">Read more...</a></div>
-            <br>
-            <div class="mui--text-headline">MUI Acquires New Features</div>
-            <div class="mui--text-black-54">By <a href="#">Team MUI</a> 3 weeks ago</div>
-            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis aliquam ipsum sed dignissim. Sed ac accumsan odio. Vivamus tristique dignissim neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc cursus felis nec purus condimentum vestibulum. Donec mauris nisi, sollicitudin eget iaculis id, suscipit id odio. <a href="#">Read more...</a></div>
+
+            <div id="list"></div>
+
+<!--            <div class="mui&#45;&#45;text-headline">MUI Acquires New Features</div>-->
+<!--            <div class="mui&#45;&#45;text-black-54">By <a href="#">Team MUI</a> 1 week ago</div>-->
+<!--            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis aliquam ipsum sed dignissim. Sed ac accumsan odio. Vivamus tristique dignissim neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc cursus felis nec purus condimentum vestibulum. Donec mauris nisi, sollicitudin eget iaculis id, suscipit id odio. <a href="#">Read more...</a></div>-->
+<!--            <br>-->
         </div>
     </div>
 </div>
