Реализовал отрисовку нового вопроса и его добавление к списку предыдущих вопросов. Подключил FireBase

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#006eff" />
-    <link href="https://cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css" />
+    <meta name="theme-color" content="#006eff"/>
+    <link href="https://cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css"/>
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
     <title>Native JavaScript Application</title>
 </head>
@@ -27,14 +27,16 @@
             <br>
             <form class="mui-form" id="form">
                 <div class="mui-textfield">
-                    <input type="text" id="question-input" placeholder="Type your question" required minlength="10" maxlength="255">
+                    <input type="text" id="question-input" placeholder="Type your question" required minlength="10"
+                           maxlength="255">
                     <label for="question-input">What do you want to ask?</label>
                 </div>
                 <button
                         id="submit"
                         disabled
                         type="submit"
-                        class="mui-btn mui-btn--raised mui-btn--primary">ASK</button>
+                        class="mui-btn mui-btn--raised mui-btn--primary">ASK
+                </button>
             </form>
             <br>
             <br>
@@ -43,11 +45,6 @@
             <br>
 
             <div id="list"></div>
-
-<!--            <div class="mui&#45;&#45;text-headline">MUI Acquires New Features</div>-->
-<!--            <div class="mui&#45;&#45;text-black-54">By <a href="#">Team MUI</a> 1 week ago</div>-->
-<!--            <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In facilisis aliquam ipsum sed dignissim. Sed ac accumsan odio. Vivamus tristique dignissim neque. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nunc cursus felis nec purus condimentum vestibulum. Donec mauris nisi, sollicitudin eget iaculis id, suscipit id odio. <a href="#">Read more...</a></div>-->
-<!--            <br>-->
         </div>
     </div>
 </div>
