Реализовал получение вопросов с базы данных. Авторизация работает корректно. есть небольшая проблема с модальным окном (Оно может закрыться после нажатия на нем кнопки)

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#006eff"/>
     <link href="https://cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
     <title>Native JavaScript Application</title>
 </head>
 <body>
+<button class="mui-btn mui-btn--fab mui-btn--accent floating-btn" id="modal-btn">All</button>
 <div id="sidebar">
     <div class="mui--text-white mui--text-display1 mui--align-vertical">
         Podcast questions
